infra/k8s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giga-data-sharing-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "kv-cert-unitst"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: io-datasharing-dev.unitst.org
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: data-sharing-proxy
                port:
                  number: 5000
